--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,13 @@ ul#keyboard-first-row > li {
           border-radius: 4px;
 }
 
+ul#keyboard-first-row > li:hover {
+  background-color: #fcfcfc;
+  box-shadow: 0 3px #bfbfc2,
+              inset 0 0 3px #bfbfc2;
+  color: #555;
+}
+
 ul#keyboard-first-row > li:first-child {
   margin-left: 10px;
 }
@@ -136,6 +143,13 @@ ul#keyboard-second-row > li {
           border-radius: 4px;
 }
 
+ul#keyboard-second-row > li:hover {
+  background-color: #fcfcfc;
+  box-shadow: 0 3px #bfbfc2,
+              inset 0 0 3px #bfbfc2;
+  color: #555;
+}
+
 ul#keyboard-second-row > li:first-child {
   margin-left: 10px;
 }
@@ -153,6 +167,8 @@ ul#keyboard-second-row > li.delete-key {
   width: 70px;
   vertical-align: top;
 }
+
+
 
 /* Third Row */
 
@@ -183,6 +199,13 @@ ul#keyboard-third-row > li {
           border-radius: 4px;
 }
 
+ul#keyboard-third-row > li:hover {
+  background-color: #fcfcfc;
+  box-shadow: 0 3px #bfbfc2,
+              inset 0 0 3px #bfbfc2;
+  color: #555;
+}
+
 ul#keyboard-third-row > li:first-child {
   margin-left: 0;
 }
@@ -193,7 +216,7 @@ ul#keyboard-third-row > li.tab-key {
   margin-top: 0;
   text-align: left;
   vertical-align: middle;
-  width: 60px;
+  width: 70px;
 }
 
 ul#keyboard-third-row > li.tab-key div {
@@ -223,10 +246,22 @@ ul#keyboard-fourth-row > li {
   color: #99999b;
   /* Misc */
   cursor: pointer;
-  box-shadow: 0 4px #bfbfc2;
+  box-shadow: 0 5px #bfbfc2;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+  -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
+
+
+}
+
+ul#keyboard-fourth-row > li:hover {
+  background-color: #fcfcfc;
+  box-shadow: 0 3px #bfbfc2,
+              inset 0 0 3px #bfbfc2;
+  color: #555;
 }
 
 ul#keyboard-fourth-row > li:first-child {
@@ -234,11 +269,20 @@ ul#keyboard-fourth-row > li:first-child {
 }
 
 ul#keyboard-fourth-row > li.caps-lock {
-  height: 45px;
   margin-left: 10px;
   margin-top: 0;
-  width: 80px;
+  padding-top: 38px;
+  text-align: left;
+  width: 85px;
   vertical-align: middle;
+}
+
+ul#keyboard-fourth-row > li#enter-return {
+  height: 45px;
+  line-height: 2;
+  text-align: right;
+  width: 95px;
+  vertical-align: top;
 }
 
 /* Fifth Row */
@@ -270,20 +314,40 @@ ul#keyboard-fifth-row > li {
           border-radius: 4px;
 }
 
+ul#keyboard-fifth-row > li:hover {
+  background-color: #fcfcfc;
+  box-shadow: 0 3px #bfbfc2,
+              inset 0 0 3px #bfbfc2;
+  color: #555;
+}
+
 ul#keyboard-fifth-row > li:first-child {
   margin-left: 0;
 }
 
-ul#keyboard-fifth-row > li.shift-key {
+ul#keyboard-fifth-row > li.shift-key:nth-child(1) {
   /* Positioning */
   /* Box-model */
   height: 45px;
   margin-left: 10px;
   margin-top: 0;
-  width: 95px;
+  width: 130px;
   vertical-align: middle;
   /* Typography */
   text-align: left;
+  /* Visual */
+  /* Misc */
+}
+
+ul#keyboard-fifth-row > li.shift-key:last-child {
+  /* Positioning */
+  /* Box-model */
+  height: 45px;
+  margin-top: 0;
+  width: 130px;
+  vertical-align: middle;
+  /* Typography */
+  text-align: right;
   /* Visual */
   /* Misc */
 }
@@ -293,7 +357,6 @@ ul#keyboard-fifth-row > li.shift-key {
 ul#keyboard-sixth-row {
   margin: 0 auto;
   list-style: none;
-  text-align: center;
 }
 
 ul#keyboard-sixth-row > li {
@@ -318,8 +381,15 @@ ul#keyboard-sixth-row > li {
           border-radius: 4px;
 }
 
+ul#keyboard-sixth-row > li:hover {
+  background-color: #fcfcfc;
+  box-shadow: 0 3px #bfbfc2,
+              inset 0 0 3px #bfbfc2;
+  color: #555;
+}
+
 ul#keyboard-sixth-row > li:first-child {
-  margin-left: 0;
+  margin-left: 10px;
 }
 
 ul#keyboard-sixth-row > li#spacebar {
