Key Transitions, Refactor CSS, Polish Keyboard

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
-/* Global Resets */
+/* Global Rules */
 
 * {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
+.text-left { text-align: left; }
+.text-right { text-align: right; }
+.text-center { text-align: center; }
 
 /* Unordered List Reset*/
 
@@ -13,6 +17,7 @@ ul {
   -webkit-margin-end: 0;
   -webkit-padding-start: 0;
 }
+
 
 
 /* Demo Specific */
@@ -42,16 +47,62 @@ div.keyboard {
   /* Typography */
   /* Visual */
   background-color: #eceef1;
-  /* Misc */
+background-image: -webkit-gradient(
+  linear,
+  left bottom,
+  left top,
+  color-stop(0, #D7D8DC),
+  color-stop(0.23, #E0E0E0)
+);
+background-image: -o-linear-gradient(top, #D7D8DC 0%, #E0E0E0 23%);
+background-image: -moz-linear-gradient(top, #D7D8DC 0%, #E0E0E0 23%);
+background-image: -webkit-linear-gradient(top, #D7D8DC 0%, #E0E0E0 23%);
+background-image: -ms-linear-gradient(top, #D7D8DC 0%, #E0E0E0 23%);
+background-image: linear-gradient(to top, #D7D8DC 0%, #E0E0E0 23%);
   -webkit-border-radius: 20px;
      -moz-border-radius: 20px;
           border-radius: 20px;
+}
+
+div.keyboard li.number-key {
+  /* Positioning */
+  /* Box-model */
+  height: 40px;
+  line-height: 2;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 15px;
+  vertical-align: top;
+  /* Typography */
+  text-align: center;
+  /* Visual */
+  /* Misc */
 }
 
 div.keyboard li.letter-key {
   /* Positioning */
   /* Box-model */
   height: 45px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  /* Typography */
+  text-align: center;
+  /* Visual */
+  /* Misc */
+}
+
+div.keyboard li.special-character-key {
+  /* Positioning */
+  /* Box-model */
+  height: 40px;
+  line-height: 2;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 15px;
+  vertical-align: top;
   /* Typography */
   text-align: center;
   /* Visual */
@@ -59,7 +110,7 @@ div.keyboard li.letter-key {
 }
 
 div.keyboard li.letter-key div.letter {
-  padding-top: 15px;
+  padding-top: 25px;
 }
 
 /* First Row */
@@ -89,6 +140,9 @@ ul#keyboard-first-row > li {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+  -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
 }
 
 ul#keyboard-first-row > li:hover {
@@ -99,7 +153,7 @@ ul#keyboard-first-row > li:hover {
 }
 
 ul#keyboard-first-row > li:first-child {
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 ul#keyboard-first-row > li span.function-key {
@@ -126,7 +180,6 @@ ul#keyboard-second-row > li {
   /* Box-model */
   margin-top: 15px;
   margin-left: 5px;
-  padding: 8px 20px 8px 20px;
   width: 30px;
   /* Typography */
   font-size: 12px;
@@ -141,6 +194,9 @@ ul#keyboard-second-row > li {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+  -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
 }
 
 ul#keyboard-second-row > li:hover {
@@ -151,20 +207,16 @@ ul#keyboard-second-row > li:hover {
 }
 
 ul#keyboard-second-row > li:first-child {
-  margin-left: 10px;
-}
-
-ul#keyboard-second-row > li.number-key {
-  line-height: 1.8;
-
+  margin-left: 15px;
 }
 
 
 ul#keyboard-second-row > li.delete-key {
-  height: 20px;
-  padding-top: 30px;
+  height: 25px;
+  padding-top: 40px;
+  padding-right: 5px;
   text-align: right;
-  width: 70px;
+  width: 105px;
   vertical-align: top;
 }
 
@@ -183,7 +235,6 @@ ul#keyboard-third-row > li {
   /* Box-model */
   margin-top: 15px;
   margin-left: 5px;
-  padding: 8px 20px 8px 20px;
   width: 30px;
   /* Typography */
   font-size: 12px;
@@ -197,6 +248,9 @@ ul#keyboard-third-row > li {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+  -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
 }
 
 ul#keyboard-third-row > li:hover {
@@ -206,17 +260,15 @@ ul#keyboard-third-row > li:hover {
   color: #555;
 }
 
-ul#keyboard-third-row > li:first-child {
-  margin-left: 0;
-}
-
 ul#keyboard-third-row > li.tab-key {
   height: 45px;
-  margin-left: 10px;
+  margin-left: 15px;
   margin-top: 0;
+  padding-left: 10px;
+  padding-top: 20px;
   text-align: left;
   vertical-align: middle;
-  width: 70px;
+  width: 100px;
 }
 
 ul#keyboard-third-row > li.tab-key div {
@@ -236,7 +288,6 @@ ul#keyboard-fourth-row > li {
   /* Box-model */
   margin-top: 15px;
   margin-left: 5px;
-  padding: 8px 20px 8px 20px;
   width: 30px;
   /* Typography */
   font-size: 12px;
@@ -264,24 +315,23 @@ ul#keyboard-fourth-row > li:hover {
   color: #555;
 }
 
-ul#keyboard-fourth-row > li:first-child {
-  margin-left: 0;
-}
-
 ul#keyboard-fourth-row > li.caps-lock {
-  margin-left: 10px;
+  margin-left: 15px;
   margin-top: 0;
-  padding-top: 38px;
+  padding-left: 10px;
+  padding-top: 45px;
+  padding-bottom: 5px;
   text-align: left;
-  width: 85px;
+  width: 115px;
   vertical-align: middle;
 }
 
 ul#keyboard-fourth-row > li#enter-return {
-  height: 45px;
-  line-height: 2;
+  height: 65px;
+  line-height: 2.6;
+  padding-right: 10px;
   text-align: right;
-  width: 95px;
+  width: 125px;
   vertical-align: top;
 }
 
@@ -298,7 +348,6 @@ ul#keyboard-fifth-row > li {
   /* Box-model */
   margin-top: 15px;
   margin-left: 5px;
-  padding: 8px 20px 8px 20px;
   width: 30px;
   /* Typography */
   font-size: 12px;
@@ -312,6 +361,9 @@ ul#keyboard-fifth-row > li {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+  -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
 }
 
 ul#keyboard-fifth-row > li:hover {
@@ -321,17 +373,16 @@ ul#keyboard-fifth-row > li:hover {
   color: #555;
 }
 
-ul#keyboard-fifth-row > li:first-child {
-  margin-left: 0;
-}
-
 ul#keyboard-fifth-row > li.shift-key:nth-child(1) {
   /* Positioning */
   /* Box-model */
-  height: 45px;
-  margin-left: 10px;
+  height: 15px;
+  margin-left: 15px;
   margin-top: 0;
-  width: 130px;
+  padding-top: 40px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  width: 155px;
   vertical-align: middle;
   /* Typography */
   text-align: left;
@@ -342,9 +393,12 @@ ul#keyboard-fifth-row > li.shift-key:nth-child(1) {
 ul#keyboard-fifth-row > li.shift-key:last-child {
   /* Positioning */
   /* Box-model */
-  height: 45px;
+  height: 15px;
   margin-top: 0;
-  width: 130px;
+  padding-top: 40px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  width: 165px;
   vertical-align: middle;
   /* Typography */
   text-align: right;
@@ -365,7 +419,7 @@ ul#keyboard-sixth-row > li {
   /* Box-model */
   margin-top: 15px;
   margin-left: 5px;
-  padding: 8px 20px 8px 20px;
+  padding: 8px 35px 8px 8px;
   width: 30px;
   /* Typography */
   font-size: 12px;
@@ -379,6 +433,9 @@ ul#keyboard-sixth-row > li {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+  -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
 }
 
 ul#keyboard-sixth-row > li:hover {
@@ -388,11 +445,34 @@ ul#keyboard-sixth-row > li:hover {
   color: #555;
 }
 
-ul#keyboard-sixth-row > li:first-child {
-  margin-left: 10px;
+ul#keyboard-sixth-row > li#fn-key {
+  margin-left: 15px;
+  padding-top: 40px;
+  vertical-align: top;
+}
+
+ul#keyboard-sixth-row > li#control-key {
+  padding-top: 40px;
+  text-align: left;
+  vertical-align: top;
+}
+
+ul#keyboard-sixth-row > li.option-key {
+  line-height: 2;
+  text-align: left;
+  vertical-align: top;
 }
 
 ul#keyboard-sixth-row > li#spacebar {
-  height: 40px;
-  width: 350px;
+  height: 48px;
+  width: 343px;
 }
+
+ul#keyboard-sixth-row > li.command-key {
+  line-height: 2;
+  text-align: left;
+  vertical-align: top;
+  width: 40px;
+}
+
+
